# ciaa-z3r0-blinky

./: .gitignore  README.md  cross_file_gcc.build  meson.build  program.c
external_dependencies/: list_all_c_files.py  meson.build
external_dependencies/sapi/inc/: InitDevice.h  emodes.h  moveIntVectorToRAM.h  sapi_adc.h  sapi_circularBuffer.h  sapi_consolePrint.h  sapi_datatypes.h  sapi_debugPrint.h  sapi_i2c.h  sapi_peripheral_map.h  sapi_print.h  sapi_uart.h
external_dependencies/sapi/libs/: libs.mk  openocd_ciaa_z3r0.cfg
external_dependencies/sapi/libs/CMSIS/: version.txt
external_dependencies/sapi/libs/Device/SiliconLabs/EFM32HG/Source/: system_efm32hg.c
external_dependencies/sapi/libs/Device/SiliconLabs/EFM32HG/Source/GCC/: startup_efm32hg.c
external_dependencies/sapi/libs/emlib/inc/: em_int.h
external_dependencies/sapi/libs/middleware/usb_gecko/: Changes_usb.txt
external_dependencies/sapi/libs/middleware/usb_gecko/src/: em_usbh.c  em_usbhep.c  em_usbhint.c
external_dependencies/sapi/libs/middleware/usbxpress/inc/: em_usbxpress.h  em_usbxpress_descriptors.h  em_usbxpress_internal.h  usbconfig.h
external_dependencies/sapi/libs/middleware/usbxpress/src/: em_usbxpress.c  em_usbxpress_callback.c  em_usbxpress_descriptors.c
external_dependencies/sapi/src/: InitDevice.c  emodes.c  moveIntVectorToRAM.c  sapi_adc.c  sapi_board.c  sapi_circularBuffer.c  sapi_clock.c  sapi_core.c  sapi_datatypes.c  sapi_delay.c  sapi_gpio.c  sapi_i2c.c  sapi_print.c  sapi_rtc.c  sapi_tick.c  sapi_uart.c
